--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.0",
     "socket.io-client": "^4.6.1",
     "styled-components": "^5.3.6",
     "typescript": "^4.4.2",
