--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@types/styled-components": "^5.1.26"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
